; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/netapi32/extr_nbt.c_NetBTStoreCacheEntry.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/netapi32/extr_nbt.c_NetBTStoreCacheEntry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.NBNameCache = type { i32 }

@NRC_BADDR = common dso_local global i32 0, align 4
@gCacheTimeout = common dso_local global i32 0, align 4
@NRC_GOODRET = common dso_local global i32 0, align 4
@NRC_OSRESNOTAV = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.NBNameCache**, i32*)* @NetBTStoreCacheEntry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @NetBTStoreCacheEntry(%struct.NBNameCache** %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.NBNameCache**, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store %struct.NBNameCache** %0, %struct.NBNameCache*** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load %struct.NBNameCache**, %struct.NBNameCache*** %4, align 8
  %8 = icmp ne %struct.NBNameCache** %7, null
  br i1 %8, label %11, label %9

9:                                                ; preds = %2
  %10 = load i32, i32* @NRC_BADDR, align 4
  store i32 %10, i32* %3, align 4
  br label %48

11:                                               ; preds = %2
  %12 = load i32*, i32** %5, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %16, label %14

14:                                               ; preds = %11
  %15 = load i32, i32* @NRC_BADDR, align 4
  store i32 %15, i32* %3, align 4
  br label %48

16:                                               ; preds = %11
  %17 = load %struct.NBNameCache**, %struct.NBNameCache*** %4, align 8
  %18 = load %struct.NBNameCache*, %struct.NBNameCache** %17, align 8
  %19 = icmp ne %struct.NBNameCache* %18, null
  br i1 %19, label %25, label %20

20:                                               ; preds = %16
  %21 = call i32 (...) @GetProcessHeap()
  %22 = load i32, i32* @gCacheTimeout, align 4
  %23 = call %struct.NBNameCache* @NBNameCacheCreate(i32 %21, i32 %22)
  %24 = load %struct.NBNameCache**, %struct.NBNameCache*** %4, align 8
  store %struct.NBNameCache* %23, %struct.NBNameCache** %24, align 8
  br label %25

25:                                               ; preds = %20, %16
  %26 = load %struct.NBNameCache**, %struct.NBNameCache*** %4, align 8
  %27 = load %struct.NBNameCache*, %struct.NBNameCache** %26, align 8
  %28 = icmp ne %struct.NBNameCache* %27, null
  br i1 %28, label %29, label %41

29:                                               ; preds = %25
  %30 = load %struct.NBNameCache**, %struct.NBNameCache*** %4, align 8
  %31 = load %struct.NBNameCache*, %struct.NBNameCache** %30, align 8
  %32 = load i32*, i32** %5, align 8
  %33 = call i64 @NBNameCacheAddEntry(%struct.NBNameCache* %31, i32* %32)
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %35, label %37

35:                                               ; preds = %29
  %36 = load i32, i32* @NRC_GOODRET, align 4
  br label %39

37:                                               ; preds = %29
  %38 = load i32, i32* @NRC_OSRESNOTAV, align 4
  br label %39

39:                                               ; preds = %37, %35
  %40 = phi i32 [ %36, %35 ], [ %38, %37 ]
  store i32 %40, i32* %6, align 4
  br label %46

41:                                               ; preds = %25
  %42 = call i32 (...) @GetProcessHeap()
  %43 = load i32*, i32** %5, align 8
  %44 = call i32 @HeapFree(i32 %42, i32 0, i32* %43)
  %45 = load i32, i32* @NRC_OSRESNOTAV, align 4
  store i32 %45, i32* %6, align 4
  br label %46

46:                                               ; preds = %41, %39
  %47 = load i32, i32* %6, align 4
  store i32 %47, i32* %3, align 4
  br label %48

48:                                               ; preds = %46, %14, %9
  %49 = load i32, i32* %3, align 4
  ret i32 %49
}

declare dso_local %struct.NBNameCache* @NBNameCacheCreate(i32, i32) #1

declare dso_local i32 @GetProcessHeap(...) #1

declare dso_local i64 @NBNameCacheAddEntry(%struct.NBNameCache*, i32*) #1

declare dso_local i32 @HeapFree(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
